# airball-usb-link

./: CMakeLists.txt  LICENSE
src/: AbstractSerialLink.h  AbstractSerialLinkTest_main.cpp  Base16Encoding.cpp  Base16Encoding.h  Base16EncodingTest_main.cpp  CMakeLists.txt  ITelemetry.h  SerialTelemetry.cpp  SerialTelemetry.h  Telemetry.cpp  Telemetry.h
